# MADAEP

./: README.md  dev_env.sh  experiments.yaml  run_experiment.py
daep/catkin_ws/src/aeplanner/aeplanner/: CMakeLists.txt  package.xml
daep/catkin_ws/src/aeplanner/aeplanner/include/aeplanner/: aeplanner.h  data_structures.h
daep/catkin_ws/src/aeplanner/aeplanner/launch/: aeplanner_nodelet.launch
daep/catkin_ws/src/aeplanner/aeplanner/msg/: Goals.msg
daep/catkin_ws/src/aeplanner/aeplanner/src/: aeplanner.cpp  param.cpp
images/baseline_test_racer/: Dockerfile
images/baseline_test_ribeiro/: Dockerfile
images/madaep/: Dockerfile
images/madaep_old_version/: Dockerfile
images/racer/: Dockerfile
images/ribeiro/: Dockerfile
madaep/: .bashrc  apf.py  simulation.sh
madaep/building_editor_models/stairs/: model.sdf
racer/: exploration.sh
racer/.config/: QtProject.conf
racer/.gazebo/: gui.ini
racer/.rviz/: persistent_settings
racer/building_editor_models/big_square/: model.config  model.sdf
racer/building_editor_models/square_wall/: model.config  model.sdf
report_results/collision/daep0_square_dynamic_2_0_0/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_0_20/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_0_40/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_0_60/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_1_0/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_1_20/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_1_40/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_1_60/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_2_0/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_2_20/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_2_40/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_2_60/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_3_0/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_3_20/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_3_40/: coverage.csv  logfile.csv
report_results/collision/daep0_square_dynamic_2_3_60/: coverage.csv  logfile.csv
visualization/: visualize.py
(+12070 files in other folders)
